[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
time = { version = "*", features = ["local-offset", "formatting", "macros"] }
lazy_static = "*"
color-rs = { path="../color-rs" }
colored-rs = { path="../colored-rs" }
drm-rs = { path="../kernel/drm-rs" }
gbm-rs = { path="../kernel/gbm-rs" }
egl-rs = { path="../kernel/egl-rs" }
kms-rs = { path="../kernel/kms-rs" }
gles-rs = { path="../gles-rs" }
